refactor: add monorepo

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-# Logs
+# dependencies
+node_modules
+
+# output
+dist
+dist-ssr
+*.local
+*.tgz
+
+# logs
 logs
 *.log
 npm-debug.log*
@@ -7,12 +16,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
