--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
-  "name": "penpot-waves-generator",
+  "name": "root",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite build --watch",
-    "build": "tsc && vite build",
-    "lint": "biome lint --write src",
-    "format": "biome format --write src"
+    "build:waves": "bun run --filter 'waves-generator' build",
+    "dev:waves": "bun run --filter 'waves-generator' dev",
+    "format": "bun run --filter '*' format",
+    "lint": "bun run --filter '*' lint"
   },
-  "packageManager": "bun@1.2.18",
+  "workspaces": [
+    "packages/*"
+  ],
+  "packageManager": "bun@1.3.9",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Omikorin/penpot-waves-generator.git"
+    "url": "https://github.com/Omikorin/penpot-plugins.git"
   },
   "author": "Michał Korczak (https://omikor.in)",
-  "license": "ISC",
-  "dependencies": {
+  "license": "AGPL-3.0-only",
+  "catalog": {
     "@penpot/plugin-styles": "1.3.2",
-    "alpinejs": "^3.14.9",
-    "d3-scale": "^4.0.2",
-    "d3-shape": "^3.2.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^2.1.1",
     "@penpot/plugin-types": "1.3.2",
     "@types/alpinejs": "^3.13.11",
     "@types/d3-scale": "^4.0.9",
     "@types/d3-shape": "^3.1.7",
+    "alpinejs": "^3.14.9",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
     "typescript": "^5.8.3",
     "vite": "^7.0.4",
     "vite-live-preview": "^0.3.2",
     "vite-plugin-handlebars": "^2.0.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.15"
   }
 }
