--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build:pattern": "bun run --filter 'pattern-hero' build",
     "dev:pattern": "bun run --filter 'pattern-hero' dev",
     "install:pattern": "bun install --filter 'pattern-hero'",
+    "build:qrcode": "bun run --filter 'beautiful-qrcode' build",
+    "dev:qrcode": "bun run --filter 'beautiful-qrcode' dev",
+    "install:qrcode": "bun install --filter 'beautiful-qrcode'",
     "build:waves": "bun run --filter 'waves-generator' build",
     "dev:waves": "bun run --filter 'waves-generator' dev",
     "install:waves": "bun install --filter 'waves-generator'",
@@ -32,6 +35,7 @@
     "alpinejs": "^3.14.9",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
+    "qr-code-styling": "^1.9.2",
     "typescript": "^5.8.3",
     "vite": "^7.0.4",
     "vite-live-preview": "^0.3.2",
